Изменение родительских тегов и поправка цвета

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <body>
 
         <header class="header content-section">
-
             <nav class="header__menu">
                 <ul class="header__links-list header__links-list-item">
                 
@@ -34,7 +33,6 @@
                 </ul>    
             </nav>
 
-
             <a class="header__logo">
                 <img
                     class="header__logo-image"
@@ -43,7 +41,7 @@
                 />
             </a>
 
-            <adress class="address">
+            <address class="address">
                 <nav class="header__address">
 
                     <a href="tel:+70000000">+9 999 555 5555</a><br>
@@ -53,7 +51,7 @@
                 265, Амстердам
 
                 </nav>
-            </adress>
+            </address>
 
         </header>
 
@@ -66,7 +64,7 @@
 
             <cover class="cover content-section ">
              
-                <cover class="overlay"></cover>
+                <overlay class="overlay"></overlay>
                 <h1 class="cover__title">
                     <p class="letter-spacing aligned-text letter-spacing-extended">он о</p> 
                     <p class="letter-spacing aligned-text_center letter-spacing-extended">теб е</p>
@@ -164,9 +162,9 @@
 
 
 
-        <footer class="footer ">
+        <footer class="footer">
 
-            <adress class="adress">
+            <address class="address">
                 <nav class="">
 
                     <a href="tel:+70000000">+9 999 555 5555</a><br>
@@ -176,7 +174,7 @@
                 265, Амстердам
 
                 </nav>
-            </adress>
+            </address>
 
 
             <nav class="footer__menu">
