--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
                     />
                 </a>
 
-                <address class="address">
-                    <nav class="header__address">
+                <address class="address header__address">
 
                         <a href="tel:+70000000">+9 999 555 5555</a><br>
                         <a href="mailto:mail@example.com">info@sobaka.ge</a><br>
@@ -52,7 +51,6 @@
                     наб. Принсенграхт 263- <br>
                     265, Амстердам
 
-                    </nav>
                 </address>
             </section>
 
@@ -179,7 +177,6 @@
             <section class="footer">
 
                 <address class="address">
-                    <nav class="">
 
                         <a href="tel:+70000000">+9 999 555 5555</a><br>
                         <a href="mailto:mail@example.com">info@sobaka.ge</a><br>
@@ -187,7 +184,7 @@
                     наб. Принсенграхт 263- <br>
                     265, Амстердам
 
-                    </nav>
+              
                 </address>
 
 
