Убрал абзацы на спаны и обернул в див оверлэй

--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
         <main>
             <section class="cover content-section">
              
-                <overlay class="overlay"></overlay>
+                <div class="overlay"></div>
                 <h1 class="cover__title">
-                    <p class="letter-spacing aligned-text letter-spacing-extended">он о</p> 
-                    <p class="letter-spacing aligned-text_center letter-spacing-extended">теб е</p>
-                    <p class="letter-spacing aligned-text_right letter-spacing-extended no-letter-spacing">н адо</p>
+                    <span class="letter-spacing aligned-text letter-spacing-extended">он о</span> 
+                    <span class="letter-spacing aligned-text_center letter-spacing-extended">теб е</span>
+                    <span class="letter-spacing aligned-text_right letter-spacing-extended no-letter-spacing">н адо</span>
                 </h1>
 
                 <h3 class="cover__title">
